[package]
name = "geekapk_r"
version = "0.1.0"
publish = false
authors = ["duangsuse <fedora-opensuse@outlook.com>"]
license = "AGPL"
description = "GeekApk Server"
readme = "README.md"
documentation = "https://geekapk.org/dev/serverr"
homepage = "https://geekapk.org"
repository = "https://github.com/geekapk/GeekApkR"
keywords = ["android", "community", "server"]

[[bin]]
name = "geekapkd"
path = "src/main.rs"

[dependencies]
lazy_static = "*"

# Web Framework
rocket = "0.3.6"
rocket_codegen = "0.3.6"

# ORM
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"

# Gist Auth
hubcaps = { version = "0.4", optional = true }

# INI Parse
rust-ini = "0.10.2"

[features]
default = ["gist_auth"]
gist_auth = ["hubcaps"]

[[test]]
name = "tests"

[badges]
travis-ci = { repository = "geekapk/GeekApkR" }
maintenance = { status = "as-is" }
