[package]
name = "geekapk_r"
version = "0.1.0"
authors = ["duangsuse <fedora-opensuse@outlook.com>"]
license = "AGPL-3.0"

description = "GeekApk Server"
readme = "README.md"
documentation = "https://geekapk.org/dev/serverr"

homepage = "https://geekapk.org"
repository = "https://github.com/geekapk/GeekApkR"
keywords = ["geekapk", "android", "community", "server"]
publish = false

[[bin]]
name = "geekapkd"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"

# Web Framework
rocket = "0.3.6"
rocket_codegen = "0.3.6"

# ORM
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"

# Gist Auth
hubcaps = { version = "0.4", optional = true }

# INI Parse
rust-ini = "0.10.2"

# WebSocket
websocket = { version = "0.20.2", optional = true, features = ["sync", "async"] }

[features]
default = ["gist_auth", "realtime_msg"]
gist_auth = ["hubcaps"]
realtime_msg = ["websocket"]

[[test]]
name = "tests"

[badges]
travis-ci = { repository = "geekapk/GeekApkR" }

is-it-maintained-issue-resolution = { repository = "geekapk/GeekApkR" }
is-it-maintained-open-issues = { repository = "geekapk/GeekApkR" }

maintenance = { status = "actively-developed" }
